--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Hesed</title>
+    <title>Rapturing Faith Christian Assembly</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -50,7 +50,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                RFA
+                
                 <img src="" alt="Homepage">
             </a>
         </div>
@@ -297,11 +297,9 @@
                 <h3 class="subhead">Current Series</h3>
                 <h2>Shape Your Life with the Words of Life.</h2>
                 <p>
-                Aut sed amet et quis aliquid laborum minus consequatur. Animi repellendus quas. 
-                Est voluptates minima ut dolorum aliquid sint. Ratione et et molestias rerum 
-                quibusdam. Deserunt suscipit ut expedita. Non numquam aut eum perferendis 
-                molestiae praesentium aliquid voluptatum numquam dolorum aliquid sint minima.
-                </p>
+                “He sent His Word to them. And He always sends His Word by His prophet, as He did in Noah’s time. He did the same thing in the days of Noah. In the days of Eli-…of Moses, we find out He done the same thing. He sent them His prophet, and they separated themselves from unbelief. Now, that’s the kind that come out. That’s the kind that believed It.”
+
+- 63-0721 - He Cares. Do You Care?</p>
             </div> <!-- end column -->
 
             <div class="column large-half medium-full">
@@ -417,8 +415,7 @@
         <div class="row footer-bottom">
             <div class="column ss-copyright">
                 <span>© Copyright RFCA 2022</span> 
-                <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
-            </div>
+                  </div>
         </div> <!-- footer-bottom -->
 
         <div class="ss-go-top">
