--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
                         <ul class="footer-list">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="volunteer.html">Who is William Branham</a></li>
+                            <li><a href="volunteer.html">Who is William Branham?</a></li>
                             <li><a href="connect-group.html">General Donation</a></li>
-                            <li><a href="events.html">Upcoming Events</a></li>
+                            <li><a href="events.html">Prayer Request</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
