--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="column large-half medium-full">
                 <div class="series-content__buttons">
                     <a href="" class="btn btn--large h-full-width">Watch the Video</a>
-                    <a href="" class="btn btn--large h-full-width">Listen To Today's Message</a>
+                    <a href="" class="btn btn--large h-full-width">Listen To The Message</a>
                 </div>
 
                 <div class="series-content__subscribe">
