--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
                     <a href="#0" title="">2019 Kids Church Camp.</a>
                 </h3>
                 <p>
-                Et consequatur nihil odio odit voluptatem qui. Dolores doloribus 
-                cupiditate totam esse dolores quod. Magni aut incidunt fugiat 
-                labore est ut non ipsam nihil. Voluptate rerum dolores unde 
-                voluptas. Et similique praesentium dolor. Et quod 
-                eius sint at quae est dolores. Beatae quo facere hic.
+                The Scriptural verse for the program is Isaiah 49:24-26
+                Shall the prey be taken from the mighty, or the lawful captive delivered?  
+                But thus saith the LORD, Even the captives of the mighty shall be taken away, and the prey of the terrible shall be delivered: for I will contend with him that contendeth with thee, and I will save thy children.   And I will feed them that oppress thee with their own flesh; and they shall be drunken with their own blood, as with sweet wine: and all flesh shall know that I the LORD I am thy Saviour and thy Redeemer, the mighty One of Jacob.
+                The emphasis is v25: the program is set to bring to an end every forms of captivity, both spiritual & natural & as such, everyone is advised to be in attendance.
+                God bless.
                 </p>
                 <ul class="events-list__meta">
                     <li class="events-list__meta-date">Saturday, September 28, 2019</li>
