--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
             <div class="column events-list__item">
                 <h3 class="display-1 events-list__item-title">
-                    <a href="#0" title="">2019 Kids Church Camp.</a>
+                    <a href="#0" title="">Fasting And Prayer</a>
                 </h3>
                 <p>
                 The Scriptural verse for the program is Isaiah 49:24-26
