--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 God bless.
                 </p>
                 <ul class="events-list__meta">
-                    <li class="events-list__meta-date">Saturday, September 28, 2019</li>
-                    <li class="events-list__meta-time">8:00AM - 5:30PM</li>
-                    <li class="events-list__meta-location">1600 Amphitheatre Parkway, Mt. View</li>
+                    <li class="events-list__meta-date">Tuesday-Thursday, May 10th-12th 2022</li>
+                    <li class="events-list__meta-time">6:00PM - 8:00PM</li>
+                    <li class="events-list__meta-location">6 Kalejaiye Street, Haruna Bus-stop, Ikorodu.</li>
                 </ul>
             </div> <!-- end events-list__item -->
             <div class="column events-list__item">
